Fix tenuring distribution